deploy: 8709be91e2ec7fb360a322db6bb82e8eb850dd76

--- a/castle/index.html
+++ b/castle/index.html
@@ -28,7 +28,12 @@ Github アカウントは持っておるな？</p>
 <ul>
 <li><a href="github">ギッハブってなに？</a></li>
 <li><a href="quest">持ってるよ</a></li>
+<li><a href="library">図書館へ行く</a></li>
 </ul>
+<hr>
+<h1 id="library">図書館</h1>
+<p>おうさま「ここは図書館じゃ。たくさんの本があるぞ。</p>
+<p><a href="#">戻る</a></p>
 
 
 
