--- a/castle/quest.html
+++ b/castle/quest.html
@@ -21,6 +21,9 @@
 <p>おうさま「上手く出来たかね？なに？変更が反映されない？
 実はな。。。おぬしの変更がこの世界に反映されるには、「マージ」が必要なのじゃ。</p>
 <p><a href="merge">マージって？</a></p>
+<ul>
+<li><a href="library">図書館へ行く</a></li>
+</ul>
 
 
 
