deploy: f81527b4fbbd50490422b9424fe76c53d2acc39c

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <li><a href="/castle/">城へ行く</a></li>
 <li><a href="/sandbox/">砂場へ行く</a></li>
 <li><a href="/react/">リアク島へ行く</a></li>
+<li><a href="/mountain/">山へ行く</a></li>
 </ul>
 
 
